src/test/deca/context/valid/instanceof-object.deca
class A{}
{
    A a;
    a instanceof Object;
}
