src/test/deca/context/invalid/instanceof-undeclaredClass.deca
{
    A a;
    a instanceof A;
}

